# Kondo_KRS_RPi

./: MIT_Licence.txt  README.md
IcsClass_V210/: CMakeLists.txt
IcsClass_V210/include/: IcsBaseClass.h  IcsHardSerialClass.h
IcsClass_V210/src/: IcsBaseClass.cpp  IcsHardSerialClass.cpp
example_programs/: CMakeLists.txt
example_programs/src/: all_motors.cpp
hds_rpi_250121/: fp-lib-table  hds_rpi.kicad_pcb  hds_rpi.kicad_prl  hds_rpi.kicad_pro  hds_rpi.kicad_sch  hds_rpi.step  hds_rpi_BUF.kicad_sch  myschematic_hds_rpi.kicad_sch  sym-lib-table
hds_rpi_250121/Gerber Files/: hds_rpi-B_Cu.gbr  hds_rpi-B_Mask.gbr  hds_rpi-B_Paste.gbr  hds_rpi-B_Silkscreen.gbr  hds_rpi-Edge_Cuts.gbr  hds_rpi-F_Cu.gbr  hds_rpi-F_Mask.gbr  hds_rpi-F_Paste.gbr  hds_rpi-F_Silkscreen.gbr  hds_rpi-In1_Cu.gbr  hds_rpi-In2_Cu.gbr  hds_rpi-NPTH.drl  hds_rpi-PTH.drl  hds_rpi-job.gbrjob
hds_rpi_250121/mylib.pretty/: Mirrored_PinHeader_2x20_P2.54mm_Vertical.kicad_mod  mylib.kicad_sym
